[package]
name = "fantastic_time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
tracing = "0.1"
tracing-subscriber = "0.2"
lazy_static = "1.4.0"
iced = "0.4"
strum = "0.24"
strum_macros = "0.24.0"
winit = "0.26.1"
# magick_rust = "0.15.0"
magick_rust = { path = "../magick-rust" }
chrono = "0.4.19"

[[bin]]
name = "main"
