[package]
name = "fantastic_time"
version = "0.1.0"
edition = "2021"
description = "照片建档器"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
tracing = "0.1"
tracing-subscriber = "0.3"
lazy_static = "1.4.0"
iced = "0.4"
strum = "0.24"
strum_macros = "0.24.0"
winit = "0.26.1"
# magick_rust = "0.15.0"
magick_rust = { path = "../magick-rust" }
chrono = "0.4.19"
rusqlite = { version = "0.27.0", features = ["window", "array", "bundled-full"] }
regex = "1.5.5"
clap = { version = "3.1.17", features = ["derive"] }
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"] }
crossbeam = "0.8.1"
uuid = {version = "0.8", features = ["serde", "v4"]}
sha2 = "0.10"
once_cell = "1.13"
rand = "0.8"
eframe = {version = "0.18", features = ["persistence"]}

[[bin]]
name = "cmd"

[[bin]]
name = "gui"